--- a/views/universal/badges/badgeBlogHerReviewerTextContainer.html
+++ b/views/universal/badges/badgeBlogHerReviewerTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
+<div class="BVBadgeItemIcon BVBadgeItemIconBlogHer"></div>
 <div class="BVBadgeItemText">Inspiration to Fitness</div>
