--- a/views/universal/badges/badgeBusinessUserTextContainer.html
+++ b/views/universal/badges/badgeBusinessUserTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Business User</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconBusinessUser"></div>
+<div class="BVBadgeItemText"><strong>Business</strong> User</div>
