--- a/views/universal/badges/badgeContributor10TextContainer.html
+++ b/views/universal/badges/badgeContributor10TextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Top 10 Contributor</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconTopContributor"></div>
+<div class="BVBadgeItemText"><strong>Top 10</strong> Contributor</div>
