--- a/views/universal/badges/badgeContributor1TextContainer.html
+++ b/views/universal/badges/badgeContributor1TextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Number One Contributor</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconTopContributor"></div>
+<div class="BVBadgeItemText"><strong>Number One</strong> Contributor</div>
