--- a/views/universal/badges/badgeContributor250TextContainer.html
+++ b/views/universal/badges/badgeContributor250TextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Top 250 Contributor</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconTopContributor"></div>
+<div class="BVBadgeItemText"><strong>Top 250</strong> Contributor</div>
