--- a/views/universal/badges/badgeDefaultTextContainer.html
+++ b/views/universal/badges/badgeDefaultTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
+<div class="BVBadgeItemIcon BVBadgeItemIconDefault"></div>
 <div class="BVBadgeItemText">BADGE!</div>
