--- a/views/universal/badges/badgeDellSupportTextContainer.html
+++ b/views/universal/badges/badgeDellSupportTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Dell Support</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconDellSupport"></div>
+<div class="BVBadgeItemText"><strong>Dell</strong> Support</div>
