--- a/views/universal/badges/badgeEcProductReviewTextContainer.html
+++ b/views/universal/badges/badgeEcProductReviewTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">EC Product Review</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconECProductReview"></div>
+<div class="BVBadgeItemText"><strong>Elite Contributor</strong> Product Review</div>
