--- a/views/universal/badges/badgeEliteContributorTextContainer.html
+++ b/views/universal/badges/badgeEliteContributorTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Elite Contributor</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconEliteContributor"></div>
+<div class="BVBadgeItemText"><strong>Elite</strong> Contributor</div>
