--- a/views/universal/badges/badgeEliteReviewerTextContainer.html
+++ b/views/universal/badges/badgeEliteReviewerTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Elite Reviewer</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconEliteReviewer"></div>
+<div class="BVBadgeItemText"><strong>Elite</strong> Reviewer</div>
