--- a/views/universal/badges/badgeExpertTextContainer.html
+++ b/views/universal/badges/badgeExpertTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Expert</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconExpert"></div>
+<div class="BVBadgeItemText"><strong>Expert</strong></div>
