--- a/views/universal/badges/badgeFeaturedTextContainer.html
+++ b/views/universal/badges/badgeFeaturedTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Featured</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconFeatured"></div>
+<div class="BVBadgeItemText"><strong>Featured</strong></div>
