--- a/views/universal/badges/badgeRewardZoneMemberTextContainer.html
+++ b/views/universal/badges/badgeRewardZoneMemberTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Reward Zone Gamers Club Member</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconRewardZoneGamers"></div>
+<div class="BVBadgeItemText"><strong>Reward Zone</strong> Gamers Club Member</div>
