--- a/views/universal/badges/badgeRewardZoneMemberUnlockedTextContainer.html
+++ b/views/universal/badges/badgeRewardZoneMemberUnlockedTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Reward Zone Gamers Club Unlocked Member</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconRewardZoneGamersUnlocked"></div>
+<div class="BVBadgeItemText"><strong>Reward Zone</strong> Gamers Club Unlocked Member</div>
