--- a/views/universal/badges/badgeRewardZoneNumberSilverTextContainer.html
+++ b/views/universal/badges/badgeRewardZoneNumberSilverTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Reward Zone Premier Silver Member</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconRewardZoneSilver"></div>
+<div class="BVBadgeItemText"><strong>Reward Zone</strong> Premier Silver Member</div>
