--- a/views/universal/badges/badgeSennheiserTextContainer.html
+++ b/views/universal/badges/badgeSennheiserTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Sennheiser Sound Guy</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconSennheiserSoundGuy"></div>
+<div class="BVBadgeItemText"><strong>Sennheiser</strong> Sound Guy</div>
