--- a/views/universal/badges/badgeSlingMediaTextContainer.html
+++ b/views/universal/badges/badgeSlingMediaTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Sling Media</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconSlingMedia"></div>
+<div class="BVBadgeItemText"><strong>Sling Media</strong></div>
