--- a/views/universal/badges/badgeSocialAnsweringSubscriberTextContainer.html
+++ b/views/universal/badges/badgeSocialAnsweringSubscriberTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Social Answering Subscriber</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconSocialAnsweringSubscriber"></div>
+<div class="BVBadgeItemText"><strong>Social Answering</strong> Subscriber</div>
