--- a/views/universal/badges/badgeStaffTextContainer.html
+++ b/views/universal/badges/badgeStaffTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Staff</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconStaff"></div>
+<div class="BVBadgeItemText"><strong>Staff</strong></div>
