--- a/views/universal/badges/badgeVerifiedPurchaserTextContainer.html
+++ b/views/universal/badges/badgeVerifiedPurchaserTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Verified Purchaser</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconVerifiedPurchaser"></div>
+<div class="BVBadgeItemText"><strong>Verified</strong> Purchaser</div>
