--- a/views/universal/badges/badgeContributor1000TextContainer.html
+++ b/views/universal/badges/badgeContributor1000TextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Top 1000 Contributor</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconTopContributor"></div>
+<div class="BVBadgeItemText"><strong>Top 1000</strong> Contributor</div>
