--- a/views/universal/badges/badgeContributor100TextContainer.html
+++ b/views/universal/badges/badgeContributor100TextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Top 100 Contributor</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconTopContributor"></div>
+<div class="BVBadgeItemText"><strong>Top 100</strong> Contributor</div>
