--- a/views/universal/badges/badgeContributor500TextContainer.html
+++ b/views/universal/badges/badgeContributor500TextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Top 500 Contributor</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconTopContributor"></div>
+<div class="BVBadgeItemText"><strong>Top 500</strong> Contributor</div>
