--- a/views/universal/badges/badgeEcReviewerTextContainer.html
+++ b/views/universal/badges/badgeEcReviewerTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Elite Reviewer</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconECReviewer"></div>
+<div class="BVBadgeItemText"><strong>Elite</strong> Reviewer</div>
