--- a/views/universal/badges/badgeRewardZoneNumberV3TextContainer.html
+++ b/views/universal/badges/badgeRewardZoneNumberV3TextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Reward Zone Member</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconRewardZone"></div>
+<div class="BVBadgeItemText"><strong>Reward Zone</strong> Member</div>
