--- a/views/universal/badges/badgeRewardZoneSilverTextContainer.html
+++ b/views/universal/badges/badgeRewardZoneSilverTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Best Buy Reward Zone Premier Silver Member</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconRewardZoneSilver"></div>
+<div class="BVBadgeItemText"><strong>Best Buy Reward Zone</strong> Premier Silver Member</div>
