--- a/views/universal/badges/badgeTopContributorsArchivedTextContainer.html
+++ b/views/universal/badges/badgeTopContributorsArchivedTextContainer.html
@@ -1,2 +1,2 @@
-<div class="BVBadgeItemIcon"></div>
-<div class="BVBadgeItemText">Top Contributor</div>
+<div class="BVBadgeItemIcon BVBadgeItemIconTopContributor"></div>
+<div class="BVBadgeItemText"><strong>Top</strong> Contributor</div>
