Submission form styling

--- a/css/bazaarvoiceUniversal.css
+++ b/css/bazaarvoiceUniversal.css
@@ -263,8 +263,10 @@ behavior: url(includes/PIE-1.0.0/PIE.htc);
 	h1._BVPageHeaderText, h2._BVSectionHeaderText {margin: 0;}
 
 	/* Sections */
-	.BVSection {border-bottom: 1px solid #eee; padding-bottom: 20px; margin-bottom: 30px;}
-	.BVSectionHeader {margin-bottom: 15px;}
+	.BVSection {background: -moz-linear-gradient(center bottom , #EBEBEB 0%, #FFFFFF 20%) repeat scroll 0 0 transparent; margin-bottom: 40px; padding: 25px 0 15px;}
+		.BVSectionHeader {padding: 0 0 2px; margin: 0 0 20px 42px;}
+			._BVSectionHeaderText {font-size: 24px; font-weight: normal; line-height: 1.333; display: block;}
+		.BVSectionBody {padding: 30px 42px 0;}
 
 	/* Error Container */
 	.BVSectionErrorContainer {color: #F00;}
@@ -272,7 +274,7 @@ behavior: url(includes/PIE-1.0.0/PIE.htc);
 	.BVErrorBorder {border: 1px solid #F00 !important;}
 
 	/* Fields */
-	.BVField {clear: left; overflow: hidden; margin-bottom: 10px;}
+	.BVField {clear: left; overflow: hidden; margin-bottom: 30px;}
 		.BVFormInputText, .BVFormInputTextarea {padding: 7px 8px; outline: none; color: #333; background-color: #fff; background-repeat: no-repeat; background-position: right center; border: 1px solid #ccc; border-radius: 3px; box-shadow: inset 0 1px 2px rgba(0,0,0,0.075); -moz-box-sizing: border-box; box-sizing: border-box; transition: all 0.15s ease-in; -webkit-transition: all 0.15s ease-in 0; vertical-align: middle;}
 		.BVFormInputText:focus, .BVFormInputTextarea:focus {border-color: #51a7e8; box-shadow: inset 0 1px 2px rgba(0,0,0,0.075),0 0 5px rgba(81,167,232,0.5);}
 		.BVFormInputText {width: 380px;}
@@ -308,9 +310,10 @@ behavior: url(includes/PIE-1.0.0/PIE.htc);
 				._BVCheckboxIndividualContainer .BVFormInputText {width: 150px;}
 
 	/* Footer */
-	.BVFooter {margin-left: 160px;}
+	.BVFooter {margin-left: 265px;}
 
 	/* Buttons */
+	.BVFieldButtonGroup {margin-left: 265px;}
 	.BVFieldButtonGroup .BVField {float: left; clear: none; margin-right: 10px;}
 		._BVButtonSubmitContainer a {color: #fff; text-shadow: 0 1px 0 rgba(193,90,24,1); background-color: #EE8A27; background-image: -moz-linear-gradient(#EE8A27, #E86C1F); background-image: -webkit-linear-gradient(#EE8A27, #E86C1F); background-image: linear-gradient(#EE8A27, #E86C1F); border: 1px solid #EE8A27; border-bottom-color: #E86C1F;}
 
