--- a/views/reviews/submission/submissionFormReviewContainer.html
+++ b/views/reviews/submission/submissionFormReviewContainer.html
@@ -8,30 +8,38 @@
 		</div>
 		<div class="BVSection BVSectionRatingsContainer">
 			<div class="BVSectionHeader _BVSectionHeaderRatingsContainer"></div>
-			<div class="BVField BVFieldRating _BVOverallRatingInputContainer"></div>
-			<div class="BVField BVFieldGroup _BVSecondaryRatingGroupInputContainer"></div>
-			<div class="BVField _BVRecommendedInputContainer"></div>
+			<div class="BVSectionBody">
+				<div class="BVField BVFieldRating _BVOverallRatingInputContainer"></div>
+				<div class="BVField BVFieldGroup _BVSecondaryRatingGroupInputContainer"></div>
+				<div class="BVField _BVRecommendedInputContainer"></div>
+			</div>
 		</div>
 		<div class="BVSection BVSectionReviewContainer">
 			<div class="BVSectionHeader _BVSectionHeaderReviewContainer"></div>
-			<div class="BVField _BVTitleInputContainer"></div>
-			<div class="BVField _BVBodyTextInputContainer"></div>
-			<div class="BVField BVFieldGroup _BVTagGroupInputContainer"></div>
+			<div class="BVSectionBody">
+				<div class="BVField _BVTitleInputContainer"></div>
+				<div class="BVField _BVBodyTextInputContainer"></div>
+				<div class="BVField BVFieldGroup _BVTagGroupInputContainer"></div>
+			</div>
 		</div>
 		<div class="BVSection BVSectionMediaContainer">
 			<div class="BVSectionHeader _BVSectionHeaderMediaContainer"></div>
-			<div class="BVField _BVPhotoUploadInputContainer"></div>
-			<div class="BVField _BVVideoUploadInputContainer"></div>
-			<div class="BVField _BVVideoCaptionInputContainer"></div>
+			<div class="BVSectionBody">
+				<div class="BVField _BVPhotoUploadInputContainer"></div>
+				<div class="BVField _BVVideoUploadInputContainer"></div>
+				<div class="BVField _BVVideoCaptionInputContainer"></div>
+			</div>
 		</div>
 		<div class="BVSection BVSectionUserContainer">
 			<div class="BVSectionHeader _BVSectionHeaderUserContainer"></div>
-			<div class="BVField _BVUserNicknameInputContainer"></div>
-			<div class="BVField _BVUserIdInputContainer"></div>
-			<div class="BVField _BVUserEmailInputContainer"></div>
-			<div class="BVField _BVUserLocationInputContainer"></div>
-			<div class="BVField BVFieldGroup _BVContextDataValueGroupInputContainer"></div>
-			<div class="BVField BVFieldGroup _BVAdditionalFieldGroupInputContainer"></div>
+			<div class="BVSectionBody">
+				<div class="BVField _BVUserNicknameInputContainer"></div>
+				<div class="BVField _BVUserIdInputContainer"></div>
+				<div class="BVField _BVUserEmailInputContainer"></div>
+				<div class="BVField _BVUserLocationInputContainer"></div>
+				<div class="BVField BVFieldGroup _BVContextDataValueGroupInputContainer"></div>
+				<div class="BVField BVFieldGroup _BVAdditionalFieldGroupInputContainer"></div>
+			</div>
 		</div>
 	</div>
 	<div class="BVFooter">
