--- a/views/universal/submission/inputTextAreaWithCharacterCounter.html
+++ b/views/universal/submission/inputTextAreaWithCharacterCounter.html
@@ -1,5 +1,4 @@
 <label class="_BVLabelText" for=""></label>
 <div class="_BVFormInputWrapper"></div>
 <div class="_BVHelperText"></div>
-<div class="BVCharacterCounterText">Character(s) needed to meet minimum length: </div>
-<div class="_BVCharacterCounter"></div>
+<div class="BVCharacterCounterText">You must write at least <span class="_BVCharacterCounter"></span> characters for this field.</div>
