adding product catalog info

--- a/views/reviews/submission/submissionFormReviewContainer.html
+++ b/views/reviews/submission/submissionFormReviewContainer.html
@@ -1,7 +1,9 @@
 <form id="" name="" action="" method="" data-validate="parsley">
 	<div class="_BVPageHeaderContainer"></div>
 	<div class="BVPageBody">
-		<div class="BVSection BVSectionProductContainer"></div>
+		<div class="BVSection BVSectionProductContainer">
+			<div class="_BVProductInfoWidgetContainer"></div>
+		</div>
 		<div class="BVSection BVSectionErrorContainer">
 			<div class="BVSectionHeader _BVSectionHeaderErrorsContainer"></div>
 			<div class="_BVFormErrorsContainer"></div>
