Product info styling; add HTML for submission popins

--- a/views/review_comments/submission/submissionFormReviewCommentContainer.html
+++ b/views/review_comments/submission/submissionFormReviewCommentContainer.html
@@ -13,15 +13,27 @@
 		</div>
 		<div class="BVSection BVSectionMediaContainer">
 			<div class="BVSectionHeader _BVSectionHeaderMediaContainer"></div>
+			<div class="BVSectionMediaGuidelines">
+				<div class="BVHeader">Media guidelines</div>
+				<div class="BVBody">
+					<ul>
+						<li>Up to 2 photos, 5MB each</li>
+						<li>Focus on the product and how you use it</li>
+						<li>All photos must be your own</li>
+						<li>No nudity or obscene content</li>
+						<li>Inappropriate photos will cause your entire review to be rejected</li>
+					</ul>
+				</div>
+			</div>
 			<div class="BVField _BVPhotoUploadContainer"></div>
 			<div class="BVField _BVVideoUploadInputContainer"></div>
 		</div>
 		<div class="BVSection BVSectionUserContainer">
 			<div class="BVSectionHeader _BVSectionHeaderUserContainer"></div>
 			<div class="BVField _BVUserNicknameInputContainer"></div>
-			<div class="BVField _BVUserEmailInputContainer"></div>
 			<div class="BVField _BVUserLocationInputContainer"></div>
 			<div class="BVField BVFieldGroup _BVContextDataValueGroupInputContainer"></div>
+			<div class="BVField _BVUserEmailInputContainer"></div>
 		</div>
 	</div>
 	<div class="BVFooter">
