--- a/views/reviews/submission/submissionFormReviewContainer.html
+++ b/views/reviews/submission/submissionFormReviewContainer.html
@@ -75,7 +75,7 @@
 				<div class="BVField BVFieldGroup _BVContextDataValueGroupInputContainer"></div>
 				<div class="BVField BVFieldGroup _BVAdditionalFieldGroupInputContainer"></div>
 				<div class="BVField _BVEmailAlertWhenPublishedContainer"></div>
-				<div class="BVField _BVEmailAlertWhenCommentedContainer"></div>Î
+				<div class="BVField _BVEmailAlertWhenCommentedContainer"></div>
 				<div class="BVField _BVUserEmailInputContainer"></div>
 			</div>
 		</div>
