Script to show/hide tip boxes on submission

--- a/views/reviews/submission/submissionFormReviewContainer.html
+++ b/views/reviews/submission/submissionFormReviewContainer.html
@@ -18,8 +18,8 @@
 			<div class="BVSectionHeader _BVSectionHeaderReviewContainer"></div>
 			<div class="BVSectionBody">
 				<div class="BVSectionMediaGuidelines">
-					<div class="BVPopinLauncher">Helpful Tips</div>
-					<div class="BVPopin">
+					<div class="BVPopinLauncher"><a href="#BVSectionReviewContainerPopin">Helpful Tips</a></div>
+					<div id="BVSectionReviewContainerPopin" class="BVPopin">
 						<div class="BVHeader">Tips for writing reviews:</div>
 						<div class="BVBody">
 							<ul>
@@ -47,9 +47,9 @@
 			<div class="BVSectionHeader _BVSectionHeaderMediaContainer"></div>
 			<div class="BVSectionBody">
 				<div class="BVSectionMediaGuidelines">
-					<div class="BVPopinLauncher">Media guidelines</div>
-					<div class="BVPopin">
-						<div class="BVHeader">Media guidelines</div>
+					<div class="BVPopinLauncher"><a href="#BVSectionMediaGuidelinesPopin">Media Guidelines</a></div>
+					<div id="BVSectionMediaGuidelinesPopin" class="BVPopin">
+						<div class="BVHeader">Media guidelines:</div>
 						<div class="BVBody">
 							<ul>
 								<li>Up to 2 photos, 5MB each</li>
