--- a/views/universal/submission/inputAdditionalFieldsContainer.html
+++ b/views/universal/submission/inputAdditionalFieldsContainer.html
@@ -1,1 +1,1 @@
-<div class="_BVAdditionalFieldIndividualInputContainer"></div>
+<div class="BVField _BVAdditionalFieldIndividualInputContainer"></div>
