--- a/views/universal/submission/inputUploadPhotoContainer.html
+++ b/views/universal/submission/inputUploadPhotoContainer.html
@@ -1,4 +1,4 @@
 <input class="_BVFormInput BVFormInputUpload" id="" type="file" name="photo" value="" />
 <label class="_BVUploadLabelText" for=""></label>
-<div class="_BVHelperText">5mb max per image</div>
+<div class="_BVHelperText">2 image max; 5mb max per image</div>
 <div class="_BVPhotoUploadPreviewToggleContainer"></div>
